Update build configuration & fix some deprecations